--- a/game/SSP.qsf
+++ b/game/SSP.qsf
@@ -50,3 +50,4 @@ set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name VHDL_FILE SSP.vhd
 set_global_assignment -name VECTOR_WAVEFORM_FILE SSP.vwf
+set_global_assignment -name SIMULATION_MODE TIMING
